# Wari

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  deploy.bat
.claude/: settings.local.json
abi-shared/src/: lib.rs
apps/hello/: Cargo.toml
apps/hello/src/: lib.rs
docs/: CLAUDE-CONTEXT.md  STATE-OF-PLAY.md  ai-os-assistant-design.md  aot-build-plan.md  aot-parallel-roadmap.md  aot-safety-cert-design.md  aot-spike-results.md  aot-target-abi.md  architecture.md  build-workflow.md  cap-registered-fastpath-design.md  cap-system-design.md  diagnostic-tags.md  driver-interface-design.md  engineering-principles.md  invariants.md  ipc-design.md  kernel-host-testing-design.md  manifesto.md  net-driver-design.md  net-driver-vf2.md  parallel-worklist.md  phase-1c-11-plan.md  phase-1c-9-plan.md  phase-1c-gmac-design.md  phase-1c-status.md  pr-workflow.md  roadmap-and-architecture.md  security-model.md  team-parallel-tasks.md  testing.md  vf2-bringup.md  vf2-gmac1-bringup.md  vf2-gmac1-rgmii-runbook.md  wasi-nn-surface.md  wasm-jit-design.md  zwari-extension.md
docs/audits/: phase-0.md
docs/book/part-3-phase-1a-silicon/: README.md  _category_.json  ch15-vf2-cross-compile.md  ch16-per-platform-drivers.md  ch17-hello-from-silicon.md
docs/pitch/: jaime-v0.md
docs/research/: atmo-sosp-2025-review.md  heli-adversarial-review.md  heli-blog-dossier.md  qemu-wasmi-hang.md  wasm3-port-evaluation.md
driver-iface/: Cargo.toml
driver-iface/src/: lib.rs  parse.rs
drivers/net/: Cargo.toml  build.rs
drivers/net/src/: diag.rs  lib.rs
drivers/uart/: Cargo.toml
drivers/uart/.cargo/: config.toml
drivers/uart/src/: lib.rs
graphify-out/: .graphify_python
kernel/: Cargo.toml  build.rs  linker-vf2.ld  linker.ld
kernel/.cargo/: config.toml
kernel/src/: abi.rs  boot.S  boot.rs  error.rs  ipc.rs  kputc.rs  main.rs  sbi.rs  trap.S  trap.rs  validate.rs
kernel/src/cap/: boot.rs  cspace.rs  mod.rs  objects.rs  pool.rs  proofs.rs  reg.rs  revoke.rs  ring_drain.rs  static_caps.rs  storage.rs  syscall.rs  types.rs
kernel/src/mem/: kvm.rs  page_alloc.rs  page_table.rs
kernel/src/mmio/: mod.rs  plic.rs  uart_ns16550.rs  volatile.rs
kernel/src/platform/: mod.rs  qemu_virt.rs  vf2.rs
kernel/src/runtime/: engine.rs  heap.rs  hello_blob.rs  host_fns.rs  loader.rs  manifest.rs  mod.rs  net_blob.rs  noop_blob.rs  sign.rs  tier1_pool.rs  tier2_net.rs  tier2_uart.rs  uart_blob.rs  wasi.rs
kernel/src/sched/: mod.rs  process.rs
scripts/: Cargo.toml  build.sh  dump-gmac1-regs.sh  gen-keypair.rs  sign-module.rs  verify-build.sh  wari-trace-decode.sh  wari-upgrade.sh
scripts/dev-keys/: README.md  wari-dev.ed25519.pub  wari-dev.ed25519.sec
tests/fixtures/aot/: arith.wasm  arith.wat  build-fixtures.sh  calls.wasm  calls.wat  fuel_bomb.wasm  fuel_bomb.wat  hostcall.wasm  hostcall.wat  memory.wasm  memory.wat
tests/fuzz/: .gitignore  Cargo.toml
tests/fuzz/fuzz_targets/: fuzz_abi_decode.rs  fuzz_wasm_validator.rs
tests/integration/: Cargo.toml
tests/integration/tests/: boot_smoke.rs  mmu_smoke.rs  runtime_noop.rs  tier2_uart_driver.rs
tests/security/: Cargo.toml
tests/security/src/: lib.rs
tests/security/tests/: cap_register_handle.rs  host_fn_escape.rs  kernel_panic_absence.rs  malformed_wasm.rs  mmio_bypass.rs  oom_bomb.rs  page_fault_kill.rs  ring_drain_binding.rs
tools/wari-aot-spike/: Cargo.toml
tools/wari-aot-spike/src/: elf.rs  main.rs  translate.rs
tools/wari-bench/: Cargo.toml
tools/wari-bench/src/: main.rs
wari-cap/: Cargo.toml
wari-cap/src/: cspace.rs  lib.rs  objects.rs  pool.rs  proofs.rs  revoke.rs  static_caps.rs  types.rs
wari-error/: Cargo.toml
wari-error/src/: lib.rs
wari-ipc/: Cargo.toml
wari-ipc/src/: lib.rs
wari-mem/: Cargo.toml
wari-mem/src/: lib.rs  page_alloc.rs  page_table.rs
wari-policy/: Cargo.toml
wari-policy/src/: lib.rs
wari-sched/: Cargo.toml
wari-sched/src/: lib.rs  policy.rs  process.rs
wari-validate/: Cargo.toml
wari-validate/src/: lib.rs
wari-wnm/: Cargo.toml
wari-wnm/src/: lib.rs
