[package]
name = "wari-kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "wari"
path = "src/main.rs"

[dependencies]
wari-abi = { path = "../abi-shared" }
wari-mem = { path = "../wari-mem" }
# Synchronous-IPC rendezvous core (Lane B / B2): the pure decision
# logic (`resolve`) plus the shared `BlockReason` vocabulary the
# scheduler's `ProcessState::Blocked` embeds. One source of truth —
# the kernel must not mirror these enums.
wari-ipc = { path = "../wari-ipc" }
# Driver contract: manifest types + DriverKind/FuncSig enums +
# DriverManifestError. Pure no_std types — same crate every
# Tier-2 driver depends on, so the kernel parser and the macro
# emission cannot drift.
wari-driver-iface = { path = "../driver-iface" }
wasmi = { version = "=0.32.3", default-features = false }
ed25519-dalek = { version = "2", default-features = false }

[features]
default = []
# Platform selection — exactly one must be active at build time.
qemu = []
vf2  = []
# Diagnostic mode — `kdebug!(subsys, ...)` macro emits subsystem-
# tagged lines on the kernel console. Compiled out otherwise. Use
# for high-level flow visibility (host fn entry, cap-check decision,
# scheduler choice). Never ship to production with this on.
debug-kernel = []
# Hot-path tracing — `ktrace!(subsys, ...)` is noisier than
# kdebug! and intended for "every dispatch, every cap lookup"-grade
# instrumentation. Compiled out otherwise. Implies debug-kernel
# semantics (additive). Pair with `--features vf2,trace-kernel` for
# the loudest possible silicon trace.
trace-kernel = ["debug-kernel"]

[profile.release]
panic = "abort"
