# SPDX-License-Identifier: AGPL-3.0-only
#
# Host-side tooling. Standalone workspace — not a member of the kernel
# workspace at /Cargo.toml so its std deps don't leak into Tier-0
# builds. Run as:
#
#   cargo run --manifest-path scripts/Cargo.toml --bin gen-keypair -- ...
#   cargo run --manifest-path scripts/Cargo.toml --bin sign-module  -- ...

[workspace]

[package]
name = "wari-tooling"
version = "0.0.1"
edition = "2021"
rust-version = "1.95.0"
license = "AGPL-3.0-only"
authors = ["Gustavo Delgadillo <goose@wari.dev>"]

[[bin]]
name = "sign-module"
path = "sign-module.rs"

[[bin]]
name = "gen-keypair"
path = "gen-keypair.rs"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
# Driver-manifest types + the shared parse module. Pure no_std,
# but Rust types compile on host just fine. Same crate the kernel
# uses; ensures sign tool and kernel agree byte-for-byte on what
# constitutes a valid manifest.
wari-driver-iface = { path = "../driver-iface" }
# Standard WASM walker for the cross-check step: extracts the
# binary's actual exports + imports + their type-section
# signatures. Sign tool uses this to assert the embedded manifest
# is not lying about the binary's surface.
wasmparser = "0.230"
