# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "wari-cap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

# Pure logic. `#![cfg_attr(not(test), no_std)]` keeps it no_std for
# the kernel build; the test profile links std so
# `cargo test -p wari-cap` runs on host. `wari-error` supplies the
# kernel-wide `KernelError` taxonomy the cap operations return — one
# taxonomy, not a parallel CapError (see the B-3 slice-1 PR).
[dependencies]
wari-error = { path = "../wari-error" }

[dev-dependencies]
