[package]
name = "wari-mem"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

# Pure logic — no dependencies. `no_std`-compatible by default; the test
# profile auto-links `std` because no `#![no_std]` attribute is set on
# the crate root, so `cargo test -p wari-mem` runs on the host.
[dependencies]

[dev-dependencies]
