# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "wari-validate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

# Pure logic — no dependencies. `#![cfg_attr(not(test), no_std)]` keeps it
# no_std for the kernel build; the test profile links std so
# `cargo test -p wari-validate` runs on host.
[dependencies]

[dev-dependencies]
