# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "wari-wnm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

# Pure logic — no dependencies. `#![cfg_attr(not(test), no_std)]` keeps
# the crate `no_std` for the kernel loader + offline toolchain builds, but
# the test profile links `std` so `cargo test -p wari-wnm` runs on host.
[dependencies]

[dev-dependencies]
