[package]
name = "wari-hello"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "The Tier-1 WASM 'hello world' — Phase 0 exit demo."

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# Phase 0: hand-rolled WASI bindings live inline in `src/lib.rs` (one
# `extern "C"` block). When the WASI surface grows past `fd_write` +
# `proc_exit` (Phase 1), this slot gets a real binding crate.

[profile.release]
opt-level = "s"
panic = "abort"
lto = true
strip = true
