# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "wari-driver-net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]

# Driver contract — same crate the UART driver depends on.
wari-driver-iface = { path = "../../driver-iface" }

# smoltcp — embedded TCP/IP stack, no_std, allocation-free in the
# default-features = false configuration. Phase 1b enables the
# minimal protocol set: Ethernet medium + IPv4 + TCP + UDP + ICMP.
# IPv6, DHCP, IGMP, and the higher-level features are off in
# Phase 1b; future PRs can flip them on as needed.
#
# Pinned to a precise minor version for reproducible builds (R8).
# We accept patch updates within the minor.
smoltcp = { version = "0.11", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
    "socket-udp",
    "socket-icmp",
] }

# Per-platform feature gate, mirrors `wari-driver-uart`. Phase 1b ships
# the qemu (VirtIO-net) variant only; the vf2 (JH7110 GMAC) variant
# compiles but its `_start` is a stub `loop {}` until PR Net-9
# (Phase 1c) lands the GMAC implementation.
#
# `default = ["qemu"]` so workspace-wide builds (cargo check / clippy /
# test) compile without tripping the `compile_error!` in `lib.rs`.
[features]
default = ["qemu"]
qemu = []
vf2  = []
# Phase-1c-11: target the JH7110's GMAC1 (MAC base 0x16040000) instead
# of GMAC0 (0x16030000). Only meaningful in combination with `vf2`.
# Lets the operator wire VF2 eth0 to a Debian-side internet router and
# VF2 eth1 to an isolated test net (e.g. OpenWrt) without cable
# juggling. Default vf2 build keeps targeting GMAC0; enable explicitly
# for the eth1-test rig.
gmac1 = ["vf2"]
# Phase-1c-12: periodic 17-register snapshot of the DWMAC RX path
# (MMC counters, MTL debug, DMA status, current descriptor) emitted
# every ~32K receive() calls. Plus a one-shot deep-dump on the very
# first OWN=0 transition. Lets the operator tell which layer drops
# frames (PHY / MAC filter / MTL FIFO / DMA) in a single screen-
# height of trace. Opt-in for diagnostic builds; default-off keeps
# production trace volume unchanged.
net-diag = []

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
strip = true
