# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "wari-driver-uart"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
# The shared driver contract: trait declarations + manifest types
# + `wari_uart_driver!` macro. This crate is the ONLY surface
# Tier-2 drivers depend on; it pins the ABI version a driver
# binary speaks. See docs/driver-interface-design.md.
wari-driver-iface = { path = "../../driver-iface" }

# Per-platform feature gate. Exactly one of `qemu` / `vf2` must be active
# at build time; both bake the platform's MMIO base + register stride
# into the .wasm as constants. The kernel `include_bytes!`s the matching
# signed blob (see kernel/src/runtime/uart_blob.rs).
#
# `default = ["qemu"]` mirrors the kernel crate's pattern (PR 8): the
# workspace's `cargo test --workspace` / `cargo clippy --workspace`
# need a feature active to dodge the `compile_error!` in `lib.rs`. The
# Makefile's real per-platform builds use `--no-default-features
# --features qemu` or `--features vf2` explicitly.
[features]
default = ["qemu"]
qemu = []
vf2  = []

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
codegen-units = 1
strip = true
